Hotfix v2.8.2: Added logger.js to popup.html

--- a/popup.html
+++ b/popup.html
@@ -411,6 +411,8 @@
 
   <script src="papaparse.min.js"></script>
   <script src="config.js"></script>
+  <script src="logger.js"></script>
+  <script src="rate-limiter.js"></script>
   <script src="security-utils.js"></script>
   <script src="ai-engine.js"></script>
   <script type="module" src="popup-logic.js"></script>
