Hotfix v2.9.1: Convert popup scripts from ES6 modules to window.*

--- a/popup.html
+++ b/popup.html
@@ -415,8 +415,12 @@
   <script src="rate-limiter.js"></script>
   <script src="security-utils.js"></script>
   <script src="ai-engine.js"></script>
-  <script type="module" src="popup-logic.js"></script>
-  <script type="module" src="popup.js"></script>
+    <script src="constants.js"></script>
+  <script src="utils.js"></script>
+  <script src="data-manager.js"></script>
+  <script src="popup-ui.js"></script>
+  <script src="popup-logic.js"></script>
+  <script src="popup.js"></script>
 </head>
 
 <body>
