UI v3.0.2: Fix dark mode, resize buttons, align text

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,12 @@
       --danger: #EF4444;
       --radius: 6px;
 
+      /* New Vars for Tables & Notes */
+      --bg-header: #f1f5f9;
+      --border-table: #cbd5e1;
+      --bg-note: #f8fafc;
+      --text-note: #64748b;
+
       /* Shadows */
       --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
       --shadow-md: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -44,6 +50,12 @@
       --success: #34D399;
       --warning: #FBBF24;
       --danger: #F87171;
+
+      /* Dark Mode Tables & Notes */
+      --bg-header: #1e293b;
+      --border-table: #334155;
+      --bg-note: #1e293b;
+      --text-note: #94a3b8;
 
       /* Shadows for dark mode */
       --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.3);
@@ -210,10 +222,19 @@
       outline-offset: 2px;
     }
 
+    /* Resume/Stop Small Variants */
+    .btn-sm {
+      padding: 6px 10px !important;
+      font-size: 12px !important;
+      width: auto !important;
+    }
+
     .btn-wrapper {
       display: flex;
       gap: 5px;
       margin-top: 5px;
+      justify-content: space-between;
+      /* Spread them out or keep start? User said "to bé" -> make smaller */
     }
 
     .btn-pause {
@@ -313,7 +334,37 @@
       display: flex;
     }
 
-    /* --- PROGRESS BAR --- */
+    /* --- MODE SELECTOR (Radio Group) --- */
+    .mode-label {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      /* Center content */
+      gap: 5px;
+      /* Close to checkbox */
+      cursor: pointer;
+      white-space: nowrap;
+      padding: 6px 0;
+      border-radius: 4px;
+      background: var(--bg-card);
+      border: 1px solid var(--border);
+      font-size: 13px;
+      line-height: 1;
+      transition: background-color 0.2s, border-color 0.2s;
+    }
+
+    .mode-label:hover {
+      border-color: var(--primary);
+      background: var(--bg-body);
+    }
+
+    .mode-label input {
+      margin: 0;
+      cursor: pointer;
+    }
+
+    /* --- LIST ITEMS --- */
     .progress-track {
       width: 100%;
       height: 6px;
@@ -422,26 +473,28 @@
     th {
       position: sticky;
       top: 0;
-      background: #f1f5f9;
+      background: var(--bg-header);
       text-align: left;
       padding: 6px;
       font-weight: 600;
-      border-bottom: 1px solid #cbd5e1;
+      border-bottom: 1px solid var(--border-table);
+      color: var(--text-main);
     }
 
     td {
       padding: 6px;
-      border-bottom: 1px solid #f1f5f9;
+      border-bottom: 1px solid var(--border-table);
+      color: var(--text-main);
     }
 
     .note-box {
       font-size: 11px;
-      color: #64748b;
-      background: #f8fafc;
+      color: var(--text-note);
+      background: var(--bg-note);
       padding: 10px;
       border-radius: var(--radius);
       margin-top: 10px;
-      border: 1px dashed #cbd5e1;
+      border: 1px dashed var(--border-table);
       line-height: 1.4;
     }
 
@@ -554,17 +607,15 @@
       <select id="runProcessSelect"></select>
     </div>
 
-    <!-- 2. MODE SELECTOR (Adjusted for compactness and centering) -->
+    <!-- 2. MODE SELECTOR -->
     <div class="mode-selector"
       style="display:flex; gap:8px; margin-bottom:12px; padding:6px; background:var(--bg-sub); border-radius:6px; border:1px solid var(--border);">
-      <label
-        style="flex:1; display:flex; align-items:center; justify-content:center; gap:6px; cursor:pointer; white-space:nowrap; padding:4px 0; border-radius:4px; background:white; border:1px solid var(--border); font-size:13px; line-height:1;">
-        <input type="radio" name="runMode" value="single" checked style="margin:0;">
+      <label class="mode-label">
+        <input type="radio" name="runMode" value="single" checked>
         <span style="font-weight:600;">Run ⚡</span>
       </label>
-      <label
-        style="flex:1; display:flex; align-items:center; justify-content:center; gap:6px; cursor:pointer; white-space:nowrap; padding:4px 0; border-radius:4px; background:white; border:1px solid var(--border); font-size:13px; line-height:1;">
-        <input type="radio" name="runMode" value="batch" style="margin:0;">
+      <label class="mode-label">
+        <input type="radio" name="runMode" value="batch">
         <span style="font-weight:600;">Batch Run 📋</span>
       </label>
     </div>
@@ -596,8 +647,8 @@
         (Single)</div>
       <div class="btn-wrapper">
         <button id="btnRun" class="btn-main">CHẠY NGAY</button>
-        <button id="btnPause" class="btn-main btn-pause">⏸️ TẠM DỪNG</button>
-        <button id="btnStop" class="btn-main btn-stop">🛑 DỪNG</button>
+        <button id="btnPause" class="btn-main btn-pause btn-sm">⏸️ TẠM DỪNG</button>
+        <button id="btnStop" class="btn-main btn-stop btn-sm">🛑 DỪNG</button>
       </div>
     </div>
 
@@ -632,8 +683,8 @@
         (Batch)</div>
       <div class="btn-wrapper">
         <button id="btnRunBatch" class="btn-main">CHẠY BATCH</button>
-        <button id="btnPauseBatch" class="btn-main btn-pause">⏸️ TẠM DỪNG</button>
-        <button id="btnStopBatch" class="btn-main btn-stop">🛑 DỪNG</button>
+        <button id="btnPauseBatch" class="btn-main btn-pause btn-sm">⏸️ TẠM DỪNG</button>
+        <button id="btnStopBatch" class="btn-main btn-stop btn-sm">🛑 DỪNG</button>
       </div>
     </div>
 
@@ -701,10 +752,10 @@
     <!-- Theme Toggle Section -->
     <div class="group-box">
       <div class="group-title">🎨 Giao Diện</div>
-      <label>Theme Mode:</label>
-      <div style="display: flex; gap: 8px; align-items: center; margin-top: 8px;">
-        <button id="themeToggle" class="btn-main"
-          style="flex: 1; display: flex; align-items: center; justify-content: center; gap: 8px;">
+      <div style="display: flex; align-items: center; justify-content: space-between;">
+        <label>Chế độ tối (Dark Mode)</label>
+        <button id="themeToggle" class="btn-icon"
+          style="width:32px; height:32px; border-radius:50%; border:1px solid var(--border);">
           <svg id="iconSun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" style="width: 20px; height: 20px;">
             <path stroke-linecap="round" stroke-linejoin="round"
@@ -715,11 +766,7 @@
             <path stroke-linecap="round" stroke-linejoin="round"
               d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
           </svg>
-          <span id="themeLabel">Light Mode</span>
         </button>
-      </div>
-      <div class="note-box" style="margin-top: 8px;">
-        💡 Click để chuyển đổi giữa Light/Dark mode
       </div>
     </div>
     <div class="group-box">
